<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <!--android:background="@color/colorRegisterBackground"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/register_title"
                android:textSize="20dp"
                android:textColor="@color/colorLetterDark"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/register_description"
                android:textColor="@color/colorLetterDark"
                />

            <Button android:id="@+id/btnCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/register_country_hint"
                android:background="@android:drawable/list_selector_background" />

            <!--<ExpandableListView
                android:id="@+id/lstviewContryCode"
                android:foregroundGravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>


                <Spinner
                    android:id="@+id/spinerCountries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textAlignment="center"/>


                        <EditText
                            android:id="@+id/edtCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textAlignment="center"
                            android:hint="@string/register_country_hint"
                            android:layout_marginTop="@dimen/activity_vertical_margin"/>
            --><!--       -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="1"
                            android:layout_marginBottom="@dimen/activity_vertical_margin">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="+"
                                android:layout_gravity="center_vertical"
                                android:textStyle="bold"/>

                            <EditText
                                android:id="@+id/edtCountryCode"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".2"
                                android:weightSum="1"
                                android:inputType="number"
                                android:textAlignment="center"
                                android:hint="@string/register_hint_country_code"/>

                            <EditText
                                android:id="@+id/edtPhoneNumber"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".6"
                                android:weightSum="1"
                                android:inputType="phone"
                                android:textAlignment="center"
                                android:hint="@string/register_hint_phone_number"/>

                            <ImageButton
                                android:id="@+id/fabRegister"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_menu_send"
                                android:layout_weight=".2"
                                android:weightSum="1"
                                android:background="@android:color/transparent"/>

                            <!--<android.support.design.widget.FloatingActionButton
                                android:id="@+id/fabRegister"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_menu_send"/>-->

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:gravity="center_horizontal"
                            android:text="@string/register_privacy_policy"
                            android:textSize="10dp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"

                            android:layout_gravity="center_horizontal|center_vertical"
                            android:src="@drawable/kebolapp_logo"/>


                    </LinearLayout>

                </ScrollView>


            </RelativeLayout>
